AI-JADEDEVS4/src/objects/SkipAutomationSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used in all triggers, Workflow rules and validation rules.</description>
    <fields>
        <fullName>Account_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Detail_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking Detail Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignMember_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CampaignMember Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExceptionHandlingUsers__c</fullName>
        <description>User Id to whome Exception Handling email are sent</description>
        <inlineHelpText>User Id to whome Exception Handling email are sent</inlineHelpText>
        <label>ExceptionHandlingUsers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpportunityLineItem Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Order Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quote Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Document_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Document Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>User Automation</label>
        <type>Checkbox</type>
    </fields>
    <label>Skip Automation Setting</label>
</CustomObject>